crates/plotnik-tests/tests/02-parser/recovery_validation/capture_mixed_dots_and_hyphens.txt
Q = (identifier) @foo.bar-baz
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:18
  |
1 | Q = (identifier) @foo.bar-baz
  |                  ^^^^^^^^^^^^
  |
help: use `@foo_bar_baz`
  |
1 - Q = (identifier) @foo.bar-baz
1 + Q = (identifier) @foo_bar_baz
  |
help: captures become fields in the output
